<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/inventory_surface"
    tools:theme="@style/Theme.InventoryHub">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/statusTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/inventory_surface"
            app:tabGravity="start"
            app:tabIndicatorAnimationMode="linear"
            app:tabIndicatorColor="@color/inventory_primary"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="3dp"
            app:tabMode="scrollable"
            app:tabRippleColor="@android:color/transparent"
            app:tabSelectedTextColor="@color/inventory_text_primary"
            app:tabTextAppearance="@style/TextAppearance.Material3.TitleSmall"
            app:tabTextColor="@color/inventory_text_secondary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/inventory_outline" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loadingIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/emptyTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/space_lg"
            android:text="@string/empty_restock_orders"
            android:textColor="@color/inventory_text_secondary"
            android:textSize="@dimen/text_size_body"
            android:visibility="gone" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/contentScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/purchaseRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/item_purchase_order" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPurchaseFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/space_lg"
        android:layout_marginBottom="@dimen/space_md"
        android:contentDescription="@string/new_purchase"
        app:backgroundTint="@color/inventory_primary"
        app:srcCompat="@drawable/ic_add" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
