<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/inventoryFragment"
        android:icon="@drawable/ic_storage"
        android:title="@string/items_tab" />
    <item
        android:id="@+id/stockMovementsFragment"
        android:icon="@drawable/ic_activity"
        android:title="@string/transactions" />
    <item
        android:id="@+id/restockOrdersFragment"
        android:icon="@drawable/ic_restock"
        android:title="@string/purchases" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>
